# pyglet-dragonbones

./: .gitignore  MANIFEST.in  Pipfile  __init__.py  bone.py  pyproject.toml  setup.py  skeleton.py  skeleton_body.py  skeleton_body_old.py  slot.py
animation/: animation_event.py  bone_event.py  skeleton_animation.py  slot_event.py
pyglet_dragonbones/: __init__.py  bone.py  config.py  get_subtextures.py  skeleton.py  skeleton_structure_manager.py  slot.py  subtexture_manager.py
pyglet_dragonbones.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pyglet_dragonbones/animation/: animation_event.py  bone_event.py  skeleton_animation.py  skeleton_animation_manager.py  slot_event.py
pyglet_dragonbones/bone/: __init__.py  _bone_transform.py  bone.py
utils/: __init__.py
