[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyglet_dragonbones"
version = "0.1.0"
description = ""
authors = [
  { name = "Dante Ferreira", email = "dante.tf5@gmail.com" }
]
requires-python = ">=3.13"

dependencies = [
  "pymunk",
  "pyglet",
  "numpy",
]

[tool.setuptools.packages.find]
where = ["."]
