[tool.poetry]
name = "pyglet_dragonbones"
version = "0.1.0"
description = ""
authors = ["Dante Ferreira"]
packages = [{ include = "pyglet_dragonbones" }]

[tool.poetry.dependencies]
python = ">=3.10.0"
pymunk = "*"
numpy = "*"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
